<resources>
    <string name="app_name">Concentration Game</string>
    <string name="single_player">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="highscores">High Scores</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_exit">Are you sure you would like to exit the game?</string>
    <string name="score">Score: </string>
    <string name="time_is_up">Time is Up! Would you like to play again? </string>
    <string name="you_win">You win! Would you like to play again? </string>
    <string name="enter_your_name">Game Over. Please enter your name</string>
    <string name="save">Save</string>
    <string name="firstPlayerScore">Player #1: </string>
    <string name="secondPlayerScore">Player #2: </string>
    <string name="player_one_turn">Player #1\'s turn</string>
    <string name="player_two_turn">Player #2\'s turn </string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="highscore">High Score</string>
    <string name="name">Name</string>
    <string name="no">No</string>
    <string name="rank">Rank</string>
    <string name="yes">Yes</string>
    <string name="player_one_won">Player 1 has won the game!</string>
    <string name="player_two_won">Player 2 has won the game!</string>
    <string name="tie">It is a tie!</string>
    <string name="game_will_start">Game will start in 5 seconds!</string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>
