<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tmc.concentrationgame.activities.MainActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_second_menu"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:id="@+id/secondMenuLinear">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/easyButton"
            android:text="@string/easy"
            android:padding="@dimen/unit_16"
            android:textSize="@dimen/unit_16_text"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mediumButton"
            android:text="@string/medium"
            android:padding="@dimen/unit_16"
            android:layout_marginTop="@dimen/unit_16"
            android:layout_marginBottom="@dimen/unit_16"
            android:textSize="@dimen/unit_16_text"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/hardButton"
            android:text="@string/hard"
            android:padding="@dimen/unit_16"
            android:textSize="@dimen/unit_16_text"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
